# zk-lab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  complexity_benchmark.cpp  kzg.cpp  kzg.h  protocol.cpp  run_tests.sh  test_comprehensive.cpp  test_suite.cpp  testbench.cpp
include/: kzg.h  ntt.h  piop.h  polynomial.h  sumcheck.h  zerotest.h
src/: kzg.cpp  main.cpp  ntt.cpp  piop.cpp  polynomial.cpp  sumcheck.cpp  zerotest.cpp
tests/: test_suite.cpp
